Added speciality doctor filters
